backend.log
[restart] No existing process on port 5000
[restart] Starting backend with ALLOW_DEV_TOKEN=1 MONGO_URI=mongodb://localhost:27017/blockvault
Traceback (most recent call last):
  File "/workspaces/BlockVault/scripts/run_backend.py", line 5, in <module>
    from blockvault import create_app
  File "/workspaces/BlockVault/blockvault/__init__.py", line 6, in <module>
    from .api.auth import bp as auth_bp
  File "/workspaces/BlockVault/blockvault/api/auth.py", line 8, in <module>
    from ..core.security import generate_jwt, require_auth
  File "/workspaces/BlockVault/blockvault/core/security.py", line 8, in <module>
    from .rbac import attach_role
  File "/workspaces/BlockVault/blockvault/core/rbac.py", line 128
    *** End of File
    ^^
SyntaxError: invalid syntax
